# rocky

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  MANIFESTO.md  README.md  RELEASE_v0.2.0.md  RELEASE_v0.3.0.md  RELEASE_v1.0.0.md  RELEASE_v1.0.1.md  ROCKY_TUNING_KNOWLEDGE.md  UPGRADE_REPORT_v0.3.0.md  UPGRADE_REPORT_v1.0.0.md  UPGRADE_REPORT_v1.0.1.md  pyproject.toml
.agent-testing/: README.md  repo-profile.json
docs/: HARNESS_NOTES.md  LITELLM_MIGRATION.md  RESEARCH_NOTES_2026-04-06.md  STUDENT_AGENT.md  TOOL_EXECUTION_NOTES_v1.0.1.md  TUI_RESEARCH.md  capabilities.json  scenarios.md
scripts/: bump_version.py  export_capabilities.py
tests/: conftest.py  test_agent_dedup.py  test_agent_runtime.py  test_agent_testing_specs.py  test_agentic_contracts.py  test_answer_bounded_text.py  test_answer_dedup.py  test_at_capture_lineage.py  test_browser_tools.py  test_capability_inventory.py  test_claim_extractor.py  test_cli.py  test_config.py  test_config_loader_unknown_keys.py  test_config_wizard.py  test_context_budget_benchmark.py  test_docs_bundle.py  test_env_redaction.py  test_env_redaction_lint.py  test_filesystem_composition.py  test_freeze_ignores_retros.py  test_harness.py  test_import_cycles.py  test_learning.py  test_learning_ledger.py  test_ledger_retriever.py  test_litellm_chat_provider.py  test_live_agentic_provider.py  test_memory.py  test_meta_command.py  test_meta_variant_canary.py  test_meta_variant_improve_at_n.py  test_meta_variant_ledger.py  test_meta_variant_live_reach.py  test_meta_variant_overlay.py  (+54 more)
(+147 files in other folders)
