[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rocky-agent"
version = "1.3.0"
description = "Rocky: CLI-first, file-first, continuously learning general agent"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OpenAI" }]
keywords = [
  "agent",
  "cli",
  "local-first",
  "automation",
  "llm",
  "developer-tools",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
]
dependencies = [
  "httpx>=0.27",
  "litellm>=1.78.5",
  "prompt_toolkit>=3.0.50",
  "rich>=14.1",
  "PyYAML>=6.0",
  "beautifulsoup4>=4.12",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "playwright>=1.50",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[project.scripts]
rocky = "rocky.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rocky = ["data/bundled_skills/**/SKILL.md"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
